@@ -1,3 +1,8 @@
+2003-07-16  Harri Porten  <porten@froglogic.com>
+
+	* connect.cpp: Digital Line Protection (DLP) support contributed
+	by Dorian Araneda <dorian.araneda at intel.com>
+
 2003-02-18  Harri Porten  <porten@kde.org>
 
 	* added keyboard accelerators, layout fix (patch from
